Refactor: Updating Elasticsearch configuration, refactoring search functionality